apps/observability-system/blackbox-exporter/config/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
  labels:
    app.kubernetes.io/name: blackbox-exporter
    app.kubernetes.io/component: httproute
    app.kubernetes.io/part-of: blackbox-exporter
    app.kubernetes.io/managed-by: flux
spec:
  parentRefs:
    - name: envoy-admin
      namespace: network-system
      sectionName: https
  hostnames:
    - blackbox-exporter.admin.reli.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: blackbox-exporter
          port: 9115
